Bug 11964 - JBD: grub-probe wants too many credits (266 > 256)
Summary: JBD: grub-probe wants too many credits (266 > 256)
Status: CLOSED CODE_FIX
Alias: None
Product: File System
Classification: Unclassified
Component: ext4 (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Theodore Tso
URL:
Keywords:
Depends on:
Blocks: 11808
  Show dependency tree
 
Reported: 2008-11-06 13:34 UTC by Theodore Tso
Modified: 2008-11-09 10:47 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.27.4
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Theodore Tso 2008-11-06 13:34:28 UTC
Latest working kernel version: 2.6.26
Earliest failing kernel version: 2.6.27

Reported by Joseph Fannin (I can't find this in the web archives for some reason, so I'll cut and paste the relevant pars of the report):

Date:  Sun, 2 Nov 2008 19:48:27 -0500
From: Joseph Fannin <jfannin@gmail.com>
Subject: JBD2/ext4 error
To: linux-ext4@vger.kernel.org
Mail-Followup-To: linux-ext4@vger.kernel.org

Hi,

I'm hitting what's probably a bug in ext4 on one of my boxes. It
always happens on the boot partition, which is extentless, since it
seems likely GRUB will choke on extents.

On with the backtrace, already:

[ 4586.330338] JBD: grub-probe wants too many credits (266 > 256)
[ 4586.330384] ext4_da_writepages: jbd2_start: 18691 pages, ino 39; err
-28
[ 4586.330398] Pid: 7365, comm: grub-probe Not tainted 2.6.27.4-1jhf-686
#4
[ 4586.330456]  [<d806a2f4>] ext4_da_writepages+0x165/0x2c0 [ext4]
[ 4586.330562]  [<d80babf2>] scsi_pool_alloc_command+0x30/0x4a [scsi_mod]
[ 4586.330647]  [<c01dd1fd>] blk_rq_map_sg+0xf1/0x240
[ 4586.330671]  [<c01e4558>] kobject_get+0xf/0x13
[ 4586.330690]  [<d806a18f>] ext4_da_writepages+0x0/0x2c0 [ext4]
Comment 1 Theodore Tso 2008-11-06 13:39:29 UTC
Patch to fix this problem here:

http://article.gmane.org/gmane.comp.file-systems.ext4/9947

Note You need to log in before you can comment on or make changes to this bug.